--- a/index.css
+++ b/index.css
@@ -99,3 +99,36 @@ footer {
     color: white;
     text-align: center;
 }
+
+@media (max-width: 700px) {
+    main#login-page-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
+        height: auto;
+        min-height: 100vh;
+        padding: 0;
+    }
+
+    section.login-flex-row {
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        align-items: flex-start;
+        margin-bottom: 16px;
+        order: -1; 
+    }
+
+    .logo-main {
+        width: 100%;
+        width: 80vw;
+        margin: 24px auto 8px auto;
+        display: block;
+    }
+
+    section.login-btns-col {
+        width: 100%;
+        padding: 16px 8px;
+    }
+}
