Updated code to allow user to input name and save name with score

--- a/src/asset/stylesheets/index.css
+++ b/src/asset/stylesheets/index.css
@@ -10,6 +10,17 @@ body {
     box-sizing: border-box;
 }
 
+.name-input{
+    padding: 10px 15px;
+    border-radius: 10px;
+}
+
+#startQuizBtn{
+    padding: 10px 15px;
+    border-radius: 10px;
+
+}
+
 .navbar>.nav-links,
 .navbar>.nav-admin {
     display: none;
