--- a/src/asset/stylesheets/topscore.css
+++ b/src/asset/stylesheets/topscore.css
@@ -8,6 +8,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 main#top-scores-page {
